Source/WebCore/editing/FrameSelection.cpp
@@ -390,9 +390,9 @@ static bool removingNodeRemovesPosition(Node* node, const Position& position)
     return element->containsIncludingShadowDOM(position.anchorNode());
 }
 
-static void clearRenderViewSelection(const Position& position)
+static void clearRenderViewSelection(Node& node)
 {
-    Ref<Document> document(position.anchorNode()->document());
+    Ref<Document> document(node.document());
     document->updateStyleIfNeeded();
     if (RenderView* view = document->renderView())
         view->clearSelection();
@@ -406,7 +406,7 @@ void DragCaretController::nodeWillBeRemoved(Node* node)
     if (!removingNodeRemovesPosition(node, m_position.deepEquivalent()))
         return;
 
-    clearRenderViewSelection(m_position.deepEquivalent());
+    clearRenderViewSelection(*node);
     clear();
 }
 
@@ -464,8 +464,15 @@ void FrameSelection::respondToNodeModification(Node* node, bool baseRemoved, boo
         }
     }
 
-    if (clearRenderTreeSelection)
-        clearRenderViewSelection(m_selection.start());
+    if (clearRenderTreeSelection) {
+        clearRenderViewSelection(*node);
+
+        // Trigger a selection update so the selection will be set again.
+        if (auto* renderView = node->document().renderView()) {
+            m_pendingSelectionUpdate = true;
+            renderView->setNeedsLayout();
+        }
+    }
 
     if (clearDOMTreeSelection)
         setSelection(VisibleSelection(), DoNotSetFocus);
